<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.snookerpointkeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/snooker" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/player"
                    android:textColor="#fafafa"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/frames"
                    android:textColor="#fafafa"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_one_frames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/initialScore"
                    android:textColor="#FFF3E0"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/points"
                    android:textColor="#fafafa"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_one_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/initialScore"
                    android:textColor="#FFF3E0"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#EA4335"
                    android:onClick="addOnePoint"
                    android:text="@string/red" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#FBBC05"
                    android:onClick="addTwoPoints"
                    android:text="@string/yellow" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#34A853"
                    android:onClick="addThreePoints"
                    android:text="@string/green" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#795548"
                    android:onClick="addFourPoints"
                    android:text="@string/brown" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#4285F4"
                    android:onClick="addFivePoints"
                    android:text="@string/blue" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#ff99aa"
                    android:onClick="addSixPoints"
                    android:text="@string/pink" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#202020"
                    android:onClick="addSevenPoints"
                    android:text="@string/black" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#E0FFFF"
                    android:onClick="addFourPoints"
                    android:text="@string/fault" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#E0FFFF"
                    android:onClick="addOnePoint"
                    android:text="@string/free" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo_2_medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/player2"
                    android:textColor="#fafafa"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/frames"
                    android:textColor="#fafafa"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_two_frames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/initialScore"
                    android:textColor="#FFF3E0"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/points"
                    android:textColor="#fafafa"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_two_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/initialScore"
                    android:textColor="#FFF3E0"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#EA4335"
                    android:onClick="addOnePointPlayerTwo"
                    android:text="@string/red" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#FBBC05"
                    android:onClick="addTwoPointsPlayerTwo"
                    android:text="@string/yellow" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#34A853"
                    android:onClick="addThreePointsPlayerTwo"
                    android:text="@string/green" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#795548"
                    android:onClick="addFourPointsPlayerTwo"
                    android:text="@string/brown" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#4285F4"
                    android:onClick="addFivePointsPlayerTwo"
                    android:text="@string/blue" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#ff99aa"
                    android:onClick="addSixPointsPlayerTwo"
                    android:text="@string/pink" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#202020"
                    android:onClick="addSevenPointsPlayerTwo"
                    android:text="@string/black" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#E0FFFF"
                    android:onClick="addFourPointsPlayerTwo"
                    android:text="@string/fault" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#E0FFFF"
                    android:onClick="addOnePointPlayerTwo"
                    android:text="@string/free" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/resetPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:onClick="resetPoints"
            android:text="@string/resetPoints" />

        <Button
            android:id="@+id/resetAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="resetAll"
            android:text="@string/resetAll" />

        <Button
            android:id="@+id/endOfRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/resetAll"
            android:layout_alignStart="@+id/resetAll"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="30dp"
            android:onClick="calculateFrames"
            android:text="@string/roundEnd" />

        <Button
            android:id="@+id/resetFrames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="resetFrames"
            android:text="@string/resetFrames" />
    </RelativeLayout>
</ScrollView>
